--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="">Jordan Tomegah</a>.
+    Coded by <a href="https://github.com/jordanBuilder">Jordan Tomegah</a>.
   </div>
   <script src="script.js"></script>
 </body>
